codegen with loginform
