# go/model_diary_assign_details_teachers.go
@@ -1,0 +1,14 @@
+/*
+ * NetSchool
+ *
+ * The API for the NetSchool irTech project
+ *
+ * API version: 5.10.63221
+ * Generated by: Swagger Codegen (https://github.com/swagger-api/swagger-codegen.git)
+ */
+package swagger
+
+type DiaryAssignDetailsTeachers struct {
+	Id int32 `json:"id,omitempty"`
+	Name string `json:"name,omitempty"`
+}
